--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.price-filter {
+  padding-left: 0;
+}
+
+input[type="range"].slider-track {
+  border: none;
+  margin: 10px 0;
+  width: 100%;
+  height: 30px;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: visible;
+  background: transparent;
+}
+
+.facebook-icon {
+  color: #3b5998; /* Code couleur officiel de Facebook */
+}
+
+.twitter-icon {
+  color: #1DA1F2; /* Code couleur officiel de Twitter */
+  /* font-size: 50px;  */
+}
